--- a/style.css
+++ b/style.css
@@ -10,11 +10,18 @@ h1{
     font-weight: 700;
 }
 
-.carousel-height{
+/*.carousel-height{
     height: 100%;
+}
+
+.carousel-item{
+    overflow: hidden;
+    max-height: 70vh;
+    max-width: 800px;
 }
 
 .carousel-item img{
     object-fit: cover;
     max-height:70vh;
-}
+    max-width: 100%;
+}*/
