--- a/style.css
+++ b/style.css
@@ -14,3 +14,10 @@ a{
 .logo{
     font-weight: 700;
 }
+
+.container-aboutme{
+    display: grid;
+    align-items: center;
+    grid-template-columns: 2fr 2fr;
+    column-gap: 5px;
+}
